# H1-code

./: .gitignore  README.md  pyproject.toml  requirements.txt
h1_code/: __init__.py  __main__.py  ai.py  cli.py
